<resources>
    <string name="app_name">LocSilence</string>
    <string name="title_activity_maps">Map</string>
    <string name="settings">Settings</string>
    <string name="about">About Us</string>
    <string name="help">HelpSettings</string>
    <string name="ok">Okay</string>
    <string name="title_location_permission">TITLE</string>
    <string name="text_location_permission">TEXT</string>
    <string name="google_maps_key">AIzaSyA09f2dq3jNETSeMCMNm8lVWxFTGtAreTY</string>
    <string name="mapButton">Map</string>
    <string name="locationButton">Locations</string>
    <string name="title_activity_add_loc_settings">addLocSettingsActivity</string>
    <string name="title_activity_settings">Settings</string>
    <string name="back">Back</string>
    <string name="set">Set</string>
    <string name="delete">Delete</string>
    <string name="search">Search</string>
    <string name="defaultText">Default</string>
    <string name="volumeTitle">Volume Title</string>
    <string name="or">or</string>
    <string name="proximity">Proximity</string>

    <!-- Strings related to Help Activity -->
    <string name="help_intro">LocSilence is an application for automatic location based volume altering.</string>
    <string name="step_1">Step 1: </string>
    <string name="step_1_title">Add a location!</string>
    <string name="step_1_instructions">\u2022 Press the \'+\' button on the main page, and search for the preferred location</string>

    <string name="step_2">Step 2: </string>
    <string name="step_2_title">Specify the context!</string>
    <string name="step_2_instructions_1">\u2022 Input what you want each volumeType to be swapped to when you\'re in the location</string>
    <string name="step_2_instructions_2">\u2022 You may also expand the location\'s radius to better accommodate your needs, or choose a custom boundary</string>
    <string name="step_2_instructions_3">\u2022 Officially set the location by pressing the set button</string>

    <string name="step_3">Step 3: </string>
    <string name="step_3_title">Edit a location!</string>
    <string name="step_3_instructions_1">\u2022 From the home screen press the \'locations\' button to see a list of your set locations</string>
    <string name="step_3_instructions_2">\u2022 Use the search bar, or manually find your location to edit or delete any location</string>

    <string name="note">Note: </string>
    <string name="note_instructions">LocSilence is only as accurate as google maps and the phone gps. LocSilence determines location based on the accuracy of these technologies and attempts to adjust the algorithm for determining if you are in a set location accordingly.</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
