<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    tools:context="com.visual.android.locsilence.SettingsHelpActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/locSilence_summary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="15dp"
            android:text="@string/help_intro"/>

        <TextView
            android:id="@+id/Step1"
            style="@style/Header2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/locSilence_summary"
            android:text="@string/step_1" />

        <TextView
            android:id="@+id/Step1_title"
            style="@style/Text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/Step1"
            android:layout_toEndOf="@+id/Step1"
            android:layout_toRightOf="@+id/Step1"
            android:text="@string/step_1_title" />

        <TextView
            android:id="@+id/Step1_part1"
            style="@style/Text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Step1_title"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@+id/Step1"
            android:layout_toRightOf="@+id/Step1"
            android:text="@string/step_1_instructions" />

        <TextView
            android:id="@+id/Step2"
            style="@style/Header2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/Step1_part1"
            android:layout_marginTop="15dp"
            android:text="@string/step_2" />

        <TextView
            android:id="@+id/Step2_title"
            style="@style/Text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/Step2"
            android:layout_toEndOf="@+id/Step2"
            android:layout_toRightOf="@+id/Step2"
            android:text="@string/step_2_title" />

        <TextView
            android:id="@+id/Step2_part1"
            style="@style/Text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Step2_title"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@+id/Step2"
            android:layout_toRightOf="@+id/Step2"
            android:text="@string/step_2_instructions_1" />

        <TextView
            android:id="@+id/Step2_part2"
            style="@style/Text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/Step2_part1"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignStart="@+id/Step2_part1"
            android:layout_below="@+id/Step2_part1"
            android:layout_marginTop="5dp"
            android:text="@string/step_2_instructions_2"/>
        <TextView
            android:id="@+id/Step2_part3"
            style="@style/Text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/Step2_part2"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignStart="@+id/Step2_part2"
            android:layout_below="@+id/Step2_part2"
            android:layout_marginTop="5dp"
            android:text="@string/step_2_instructions_3"/>
        <TextView
            android:id="@+id/Step3"
            style="@style/Header2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/Step2_part3"
            android:layout_marginTop="15dp"
            android:text="@string/step_3" />

        <TextView
            android:id="@+id/Step3_title"
            style="@style/Text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/Step3"
            android:layout_toEndOf="@+id/Step3"
            android:layout_toRightOf="@+id/Step3"
            android:text="@string/step_3_title" />

        <TextView
            android:id="@+id/Step3_part1"
            style="@style/Text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Step3_title"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@+id/Step3"
            android:layout_toRightOf="@+id/Step3"
            android:text="@string/step_3_instructions_1"/>

        <TextView
            android:id="@+id/Step3_part2"
            style="@style/Text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/Step3_part1"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignStart="@+id/Step3_part1"
            android:layout_below="@+id/Step3_part1"
            android:layout_marginTop="5dp"
            android:text="@string/step_3_instructions_2"/>

        <TextView
            android:id="@+id/Note"
            style="@style/Header2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/Step3_part2"
            android:layout_marginTop="20dp"
            android:text="@string/note" />

        <TextView
            android:id="@+id/Note_body"
            style="@style/Text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/Note"
            android:layout_toEndOf="@+id/Note"
            android:layout_toRightOf="@+id/Note"
            android:text="@string/note_instructions"/>

    </RelativeLayout>
</ScrollView>